# ai-embedded-factory

./: .gitattributes  .gitignore  AI_FACTORY_BOOTSTRAP.md  CMakeLists.txt  POLICY.md  README.md
.github/workflows/: ci.yml
ai-embedded-factory-mpx-per-api/: CMakeLists.txt  POLICY.md
ai-embedded-factory-mpx-per-api/.github/workflows/: ci.yml
ai-embedded-factory-mpx-per-api/architecture/: ARCH.md
ai-embedded-factory-mpx-per-api/src/stub/: mpx_stub.c  mpx_stub.h
ai-embedded-factory-mpx-per-api/tests/unit/: README.md
ai-embedded-factory-mpx-per-api/tests/unit/contracts/: contract_common.h  test_clock_getres_contract.c  test_clock_gettime_contract.c  test_clock_settime_contract.c  test_mpx_mq_extendattr_destroy_contract.c  test_mpx_mq_extendattr_getcontrolsize_contract.c  test_mpx_mq_extendattr_getqueueaddr_contract.c  test_mpx_mq_extendattr_getqueuesize_contract.c  test_mpx_mq_extendattr_setqueueaddr_contract.c  test_mpx_pthread_attr_getcontroladdr_contract.c  test_mpx_pthread_condattr_getcontrolsize_contract.c  test_mpx_pthread_event_flags_clear_contract.c  test_mpx_pthread_fastqueue_create_contract.c  test_mpx_pthread_memorypool_free_contract.c  test_mpx_pthread_memorypoolattr_setname_contract.c  test_mpx_pthread_partitionpool_allocate_contract.c  test_mpx_pthread_partitionpool_free_contract.c  test_mpx_pthread_resume_contract.c  test_mpx_pthread_suspend_contract.c  test_mpx_pthread_tick_sleep_contract.c  test_mpx_pthread_ticktimer_destroy_contract.c  test_mpx_pthread_ticktimer_start_contract.c  test_mpx_pthread_ticktimer_stop_contract.c  test_mpx_semattr_setname_contract.c  test_mq_close_contract.c  test_mq_getattr_contract.c  test_mq_send_contract.c  test_mq_setattr_contract.c  test_mq_timedreceive_contract.c  test_nanosleep_contract.c  test_pthread_attr_getdetachstate_contract.c  test_pthread_attr_getstackaddr_contract.c  test_pthread_attr_init_contract.c  test_pthread_attr_setdetachstate_contract.c  test_pthread_cancel_contract.c  test_pthread_cleanup_push_contract.c  test_pthread_cond_broadcast_contract.c  test_pthread_cond_destroy_contract.c  test_pthread_cond_init_contract.c  test_pthread_cond_signal_contract.c  (+23 more)
ai-embedded-factory-mpx-per-api/tests/unit/contracts/mq/: test_mpx_mq_extendattr_destroy_contract.c  test_mpx_mq_extendattr_getqueueaddr_contract.c  test_mpx_mq_extendattr_getqueuesize_contract.c  test_mq_getattr_contract.c  test_mq_open_contract.c  test_mq_receive_contract.c  test_mq_timedsend_contract.c
ai-embedded-factory-mpx-per-api/tests/unit/contracts/other/: test_mpx_semattr_destroy_contract.c  test_mpx_semattr_setname_contract.c
ai-embedded-factory-mpx-per-api/tests/unit/contracts/pthread/: test_mpx_pthread_condattr_getcontrolsize_contract.c  test_mpx_pthread_fastqueue_create_contract.c  test_mpx_pthread_fastqueueattr_getname_contract.c  test_mpx_pthread_partitionpool_allocate_contract.c  test_mpx_pthread_resume_contract.c  test_mpx_pthread_suspend_contract.c  test_mpx_pthread_tick_sleep_contract.c  test_mpx_pthread_ticks_get_contract.c  test_mpx_pthread_ticktimer_destroy_contract.c  test_pthread_attr_getdetachstate_contract.c  test_pthread_attr_getstackaddr_contract.c  test_pthread_attr_init_contract.c  test_pthread_attr_setstackaddr_contract.c  test_pthread_cancel_contract.c  test_pthread_cond_destroy_contract.c  test_pthread_cond_init_contract.c  test_pthread_cond_timedwait_contract.c  test_pthread_condattr_init_contract.c  test_pthread_join_contract.c  test_pthread_mutex_destroy_contract.c  test_pthread_mutex_init_contract.c  test_pthread_mutex_lock_contract.c  test_pthread_mutex_trylock_contract.c  test_pthread_mutex_unlock_contract.c  test_pthread_mutexattr_getprotocol_contract.c  test_pthread_mutexattr_gettype_contract.c  test_pthread_mutexattr_setpshared_contract.c  test_pthread_mutexattr_settype_contract.c  test_pthread_setcancelstate_contract.c  test_pthread_testcancel_contract.c
ai-embedded-factory-mpx-per-api/tests/unit/contracts/sync/: test_sem_destroy_contract.c  test_sem_init_contract.c  test_sem_post_contract.c  test_sem_trywait_contract.c  test_sem_wait_contract.c
ai-embedded-factory-mpx-per-api/tests/unit/contracts/time/: test_clock_getres_contract.c  test_clock_gettime_contract.c  test_nanosleep_contract.c  test_time_contract.c  test_usleep_contract.c
ai-embedded-factory-mpx-per-api/verification/: CONTRACT_TESTING.md  TEST_SPEC.csv
ai-embedded-factory-mpx-per-api/verification/contracts/: CONTRACTS_PTHREAD.csv  CONTRACTS_SYNC.csv  CONTRACTS_TIME.csv  README.md  SYNC_LIFECYCLE_PATCHES.md  SYNC_PROGRESS.md  SYNC_SUCCESS_PATHS.md  TIME_PROGRESS.md  TIME_STATE_PATCHES.md
ai-factory/: README.md  ai.sh  pipeline.sh  providers.yaml
ai-factory/agents/: architecture.yaml  implementation.yaml  orchestrator.yaml  quality.yaml  release.yaml  requirements.yaml  support.yaml  test_vnv.yaml
ai-factory/policies/: README.md
ai-factory/prompts/: constraints_mpx.md  output_contract.md  style_english.md  system_base.md
ai-factory/runner/: run.py  util.py
ai-factory/schemas/: agent_output.schema.json
ai_factory/runner/: pipeline.py  run.py  util.py
architecture/: ARCH.md  DESIGN.md  ICD.md
docs/: MPX-User-Manual-V1-0-0.docx
docs/ports/: MPX-RTOS-pthreads-card_revA.rtf  MPX-User-Manual-V1-0-0_STM32MP135F-DK-IAR_revA.docx  MPX-User-Manual-V1-0-0_STM32MP135F-DK_and_8MNANOD4-EVK-IAR_revB.docx  README.md
docs/ports/iar/: MPX-Docs-Alignment-Report_revA.md
requirements/: API_CATALOG.md  SRS.md  TRACE_MATRIX.csv
tests/harness/: README.md
tests/integration/: README.md
tests/unit/: README.md
tests/unit/contracts/: contract_common.h  test_mpx_mq_extendattr_getcontroladdr_contract.c  test_mpx_mq_extendattr_init_contract.c  test_mpx_mq_extendattr_setcontroladdr_contract.c  test_mpx_pthread_fastqueueattr_getname_contract.c  test_mpx_pthread_memory_manager_enable_contract.c  test_mq_open_contract.c  (+24 more)
tools/trace/: trace_check.py
verification/: CONTRACT_TESTING.md  TEST_PLAN.md  TEST_SPEC.csv  VnV_PLAN.md
verification/contracts/: CONTRACTS_PTHREAD.csv  CONTRACTS_SYNC.csv  PTHREAD_PROGRESS.md  README.md  SYNC_PROGRESS.md
(+114 files in other folders)
