cmake_minimum_required(VERSION 3.16)
project(mpx_rtos_clone_testskeleton C)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_library(mpx_stub src/stub/mpx_stub.c)
target_include_directories(mpx_stub PUBLIC src/stub)

enable_testing()

add_executable(test__smoke tests/unit/generated/test__smoke.c)
target_link_libraries(test__smoke PRIVATE mpx_stub)
add_test(NAME test__smoke COMMAND test__smoke)

add_executable(test_astqueue_smoke tests/unit/generated/test_astqueue_smoke.c)
target_link_libraries(test_astqueue_smoke PRIVATE mpx_stub)
add_test(NAME test_astqueue_smoke COMMAND test_astqueue_smoke)

add_executable(test_clock_smoke tests/unit/generated/test_clock_smoke.c)
target_link_libraries(test_clock_smoke PRIVATE mpx_stub)
add_test(NAME test_clock_smoke COMMAND test_clock_smoke)

add_executable(test_d_smoke tests/unit/generated/test_d_smoke.c)
target_link_libraries(test_d_smoke PRIVATE mpx_stub)
add_test(NAME test_d_smoke COMMAND test_d_smoke)

add_executable(test_erattr_smoke tests/unit/generated/test_erattr_smoke.c)
target_link_libraries(test_erattr_smoke PRIVATE mpx_stub)
add_test(NAME test_erattr_smoke COMMAND test_erattr_smoke)

add_executable(test_laddr_smoke tests/unit/generated/test_laddr_smoke.c)
target_link_libraries(test_laddr_smoke PRIVATE mpx_stub)
add_test(NAME test_laddr_smoke COMMAND test_laddr_smoke)

add_executable(test_mpx_smoke tests/unit/generated/test_mpx_smoke.c)
target_link_libraries(test_mpx_smoke PRIVATE mpx_stub)
add_test(NAME test_mpx_smoke COMMAND test_mpx_smoke)

add_executable(test_mpx_pthread_smoke tests/unit/generated/test_mpx_pthread_smoke.c)
target_link_libraries(test_mpx_pthread_smoke PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_smoke COMMAND test_mpx_pthread_smoke)

add_executable(test_mq_smoke tests/unit/generated/test_mq_smoke.c)
target_link_libraries(test_mq_smoke PRIVATE mpx_stub)
add_test(NAME test_mq_smoke COMMAND test_mq_smoke)

add_executable(test_nanosleep_smoke tests/unit/generated/test_nanosleep_smoke.c)
target_link_libraries(test_nanosleep_smoke PRIVATE mpx_stub)
add_test(NAME test_nanosleep_smoke COMMAND test_nanosleep_smoke)

add_executable(test_ontroladdr_smoke tests/unit/generated/test_ontroladdr_smoke.c)
target_link_libraries(test_ontroladdr_smoke PRIVATE mpx_stub)
add_test(NAME test_ontroladdr_smoke COMMAND test_ontroladdr_smoke)

add_executable(test_pthread_smoke tests/unit/generated/test_pthread_smoke.c)
target_link_libraries(test_pthread_smoke PRIVATE mpx_stub)
add_test(NAME test_pthread_smoke COMMAND test_pthread_smoke)

add_executable(test_sched_smoke tests/unit/generated/test_sched_smoke.c)
target_link_libraries(test_sched_smoke PRIVATE mpx_stub)
add_test(NAME test_sched_smoke COMMAND test_sched_smoke)

add_executable(test_sem_smoke tests/unit/generated/test_sem_smoke.c)
target_link_libraries(test_sem_smoke PRIVATE mpx_stub)
add_test(NAME test_sem_smoke COMMAND test_sem_smoke)

add_executable(test_sleep_smoke tests/unit/generated/test_sleep_smoke.c)
target_link_libraries(test_sleep_smoke PRIVATE mpx_stub)
add_test(NAME test_sleep_smoke COMMAND test_sleep_smoke)

add_executable(test_time_smoke tests/unit/generated/test_time_smoke.c)
target_link_libraries(test_time_smoke PRIVATE mpx_stub)
add_test(NAME test_time_smoke COMMAND test_time_smoke)

add_executable(test_usleep_smoke tests/unit/generated/test_usleep_smoke.c)
target_link_libraries(test_usleep_smoke PRIVATE mpx_stub)
add_test(NAME test_usleep_smoke COMMAND test_usleep_smoke)































































































# Contract tests (domain-based, User Manual-defined APIs)
add_executable(test_clock_getres_contract tests/unit/contracts/time/test_clock_getres_contract.c)
target_link_libraries(test_clock_getres_contract PRIVATE mpx_stub)
add_test(NAME test_clock_getres_contract COMMAND test_clock_getres_contract)

add_executable(test_clock_gettime_contract tests/unit/contracts/time/test_clock_gettime_contract.c)
target_link_libraries(test_clock_gettime_contract PRIVATE mpx_stub)
add_test(NAME test_clock_gettime_contract COMMAND test_clock_gettime_contract)

add_executable(test_clock_settime_contract tests/unit/contracts/time/test_clock_settime_contract.c)
target_link_libraries(test_clock_settime_contract PRIVATE mpx_stub)
add_test(NAME test_clock_settime_contract COMMAND test_clock_settime_contract)

add_executable(test_mpx_mq_extendattr_destroy_contract tests/unit/contracts/mq/test_mpx_mq_extendattr_destroy_contract.c)
target_link_libraries(test_mpx_mq_extendattr_destroy_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_mq_extendattr_destroy_contract COMMAND test_mpx_mq_extendattr_destroy_contract)

add_executable(test_mpx_mq_extendattr_getcontroladdr_contract tests/unit/contracts/mq/test_mpx_mq_extendattr_getcontroladdr_contract.c)
target_link_libraries(test_mpx_mq_extendattr_getcontroladdr_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_mq_extendattr_getcontroladdr_contract COMMAND test_mpx_mq_extendattr_getcontroladdr_contract)

add_executable(test_mpx_mq_extendattr_getcontrolsize_contract tests/unit/contracts/mq/test_mpx_mq_extendattr_getcontrolsize_contract.c)
target_link_libraries(test_mpx_mq_extendattr_getcontrolsize_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_mq_extendattr_getcontrolsize_contract COMMAND test_mpx_mq_extendattr_getcontrolsize_contract)

add_executable(test_mpx_mq_extendattr_getqueueaddr_contract tests/unit/contracts/mq/test_mpx_mq_extendattr_getqueueaddr_contract.c)
target_link_libraries(test_mpx_mq_extendattr_getqueueaddr_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_mq_extendattr_getqueueaddr_contract COMMAND test_mpx_mq_extendattr_getqueueaddr_contract)

add_executable(test_mpx_mq_extendattr_getqueuesize_contract tests/unit/contracts/mq/test_mpx_mq_extendattr_getqueuesize_contract.c)
target_link_libraries(test_mpx_mq_extendattr_getqueuesize_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_mq_extendattr_getqueuesize_contract COMMAND test_mpx_mq_extendattr_getqueuesize_contract)

add_executable(test_mpx_mq_extendattr_init_contract tests/unit/contracts/mq/test_mpx_mq_extendattr_init_contract.c)
target_link_libraries(test_mpx_mq_extendattr_init_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_mq_extendattr_init_contract COMMAND test_mpx_mq_extendattr_init_contract)

add_executable(test_mpx_mq_extendattr_setcontroladdr_contract tests/unit/contracts/mq/test_mpx_mq_extendattr_setcontroladdr_contract.c)
target_link_libraries(test_mpx_mq_extendattr_setcontroladdr_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_mq_extendattr_setcontroladdr_contract COMMAND test_mpx_mq_extendattr_setcontroladdr_contract)

add_executable(test_mpx_mq_extendattr_setqueueaddr_contract tests/unit/contracts/mq/test_mpx_mq_extendattr_setqueueaddr_contract.c)
target_link_libraries(test_mpx_mq_extendattr_setqueueaddr_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_mq_extendattr_setqueueaddr_contract COMMAND test_mpx_mq_extendattr_setqueueaddr_contract)

add_executable(test_mpx_pthread_attr_getcontroladdr_contract tests/unit/contracts/pthread/test_mpx_pthread_attr_getcontroladdr_contract.c)
target_link_libraries(test_mpx_pthread_attr_getcontroladdr_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_attr_getcontroladdr_contract COMMAND test_mpx_pthread_attr_getcontroladdr_contract)

add_executable(test_mpx_pthread_condattr_getcontrolsize_contract tests/unit/contracts/pthread/test_mpx_pthread_condattr_getcontrolsize_contract.c)
target_link_libraries(test_mpx_pthread_condattr_getcontrolsize_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_condattr_getcontrolsize_contract COMMAND test_mpx_pthread_condattr_getcontrolsize_contract)

add_executable(test_mpx_pthread_event_flags_clear_contract tests/unit/contracts/pthread/test_mpx_pthread_event_flags_clear_contract.c)
target_link_libraries(test_mpx_pthread_event_flags_clear_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_event_flags_clear_contract COMMAND test_mpx_pthread_event_flags_clear_contract)

add_executable(test_mpx_pthread_fastqueue_create_contract tests/unit/contracts/pthread/test_mpx_pthread_fastqueue_create_contract.c)
target_link_libraries(test_mpx_pthread_fastqueue_create_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_fastqueue_create_contract COMMAND test_mpx_pthread_fastqueue_create_contract)

add_executable(test_mpx_pthread_fastqueueattr_getname_contract tests/unit/contracts/pthread/test_mpx_pthread_fastqueueattr_getname_contract.c)
target_link_libraries(test_mpx_pthread_fastqueueattr_getname_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_fastqueueattr_getname_contract COMMAND test_mpx_pthread_fastqueueattr_getname_contract)

add_executable(test_mpx_pthread_memory_manager_enable_contract tests/unit/contracts/pthread/test_mpx_pthread_memory_manager_enable_contract.c)
target_link_libraries(test_mpx_pthread_memory_manager_enable_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_memory_manager_enable_contract COMMAND test_mpx_pthread_memory_manager_enable_contract)

add_executable(test_mpx_pthread_memorypool_free_contract tests/unit/contracts/pthread/test_mpx_pthread_memorypool_free_contract.c)
target_link_libraries(test_mpx_pthread_memorypool_free_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_memorypool_free_contract COMMAND test_mpx_pthread_memorypool_free_contract)

add_executable(test_mpx_pthread_memorypoolattr_setname_contract tests/unit/contracts/pthread/test_mpx_pthread_memorypoolattr_setname_contract.c)
target_link_libraries(test_mpx_pthread_memorypoolattr_setname_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_memorypoolattr_setname_contract COMMAND test_mpx_pthread_memorypoolattr_setname_contract)

add_executable(test_mpx_pthread_mutexattr_getcontrolsize_contract tests/unit/contracts/pthread/test_mpx_pthread_mutexattr_getcontrolsize_contract.c)
target_link_libraries(test_mpx_pthread_mutexattr_getcontrolsize_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_mutexattr_getcontrolsize_contract COMMAND test_mpx_pthread_mutexattr_getcontrolsize_contract)

add_executable(test_mpx_pthread_partitionpool_allocate_contract tests/unit/contracts/pthread/test_mpx_pthread_partitionpool_allocate_contract.c)
target_link_libraries(test_mpx_pthread_partitionpool_allocate_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_partitionpool_allocate_contract COMMAND test_mpx_pthread_partitionpool_allocate_contract)

add_executable(test_mpx_pthread_partitionpool_free_contract tests/unit/contracts/pthread/test_mpx_pthread_partitionpool_free_contract.c)
target_link_libraries(test_mpx_pthread_partitionpool_free_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_partitionpool_free_contract COMMAND test_mpx_pthread_partitionpool_free_contract)

add_executable(test_mpx_pthread_resume_contract tests/unit/contracts/pthread/test_mpx_pthread_resume_contract.c)
target_link_libraries(test_mpx_pthread_resume_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_resume_contract COMMAND test_mpx_pthread_resume_contract)

add_executable(test_mpx_pthread_suspend_contract tests/unit/contracts/pthread/test_mpx_pthread_suspend_contract.c)
target_link_libraries(test_mpx_pthread_suspend_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_suspend_contract COMMAND test_mpx_pthread_suspend_contract)

add_executable(test_mpx_pthread_tick_sleep_contract tests/unit/contracts/pthread/test_mpx_pthread_tick_sleep_contract.c)
target_link_libraries(test_mpx_pthread_tick_sleep_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_tick_sleep_contract COMMAND test_mpx_pthread_tick_sleep_contract)

add_executable(test_mpx_pthread_ticks_get_contract tests/unit/contracts/pthread/test_mpx_pthread_ticks_get_contract.c)
target_link_libraries(test_mpx_pthread_ticks_get_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_ticks_get_contract COMMAND test_mpx_pthread_ticks_get_contract)

add_executable(test_mpx_pthread_ticktimer_destroy_contract tests/unit/contracts/pthread/test_mpx_pthread_ticktimer_destroy_contract.c)
target_link_libraries(test_mpx_pthread_ticktimer_destroy_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_ticktimer_destroy_contract COMMAND test_mpx_pthread_ticktimer_destroy_contract)

add_executable(test_mpx_pthread_ticktimer_start_contract tests/unit/contracts/pthread/test_mpx_pthread_ticktimer_start_contract.c)
target_link_libraries(test_mpx_pthread_ticktimer_start_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_ticktimer_start_contract COMMAND test_mpx_pthread_ticktimer_start_contract)

add_executable(test_mpx_pthread_ticktimer_stop_contract tests/unit/contracts/pthread/test_mpx_pthread_ticktimer_stop_contract.c)
target_link_libraries(test_mpx_pthread_ticktimer_stop_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_ticktimer_stop_contract COMMAND test_mpx_pthread_ticktimer_stop_contract)

add_executable(test_mpx_pthread_ticktimer_update_contract tests/unit/contracts/pthread/test_mpx_pthread_ticktimer_update_contract.c)
target_link_libraries(test_mpx_pthread_ticktimer_update_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_pthread_ticktimer_update_contract COMMAND test_mpx_pthread_ticktimer_update_contract)

add_executable(test_mpx_semattr_destroy_contract tests/unit/contracts/other/test_mpx_semattr_destroy_contract.c)
target_link_libraries(test_mpx_semattr_destroy_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_semattr_destroy_contract COMMAND test_mpx_semattr_destroy_contract)

add_executable(test_mpx_semattr_setname_contract tests/unit/contracts/other/test_mpx_semattr_setname_contract.c)
target_link_libraries(test_mpx_semattr_setname_contract PRIVATE mpx_stub)
add_test(NAME test_mpx_semattr_setname_contract COMMAND test_mpx_semattr_setname_contract)

add_executable(test_mq_close_contract tests/unit/contracts/mq/test_mq_close_contract.c)
target_link_libraries(test_mq_close_contract PRIVATE mpx_stub)
add_test(NAME test_mq_close_contract COMMAND test_mq_close_contract)

add_executable(test_mq_getattr_contract tests/unit/contracts/mq/test_mq_getattr_contract.c)
target_link_libraries(test_mq_getattr_contract PRIVATE mpx_stub)
add_test(NAME test_mq_getattr_contract COMMAND test_mq_getattr_contract)

add_executable(test_mq_open_contract tests/unit/contracts/mq/test_mq_open_contract.c)
target_link_libraries(test_mq_open_contract PRIVATE mpx_stub)
add_test(NAME test_mq_open_contract COMMAND test_mq_open_contract)

add_executable(test_mq_receive_contract tests/unit/contracts/mq/test_mq_receive_contract.c)
target_link_libraries(test_mq_receive_contract PRIVATE mpx_stub)
add_test(NAME test_mq_receive_contract COMMAND test_mq_receive_contract)

add_executable(test_mq_send_contract tests/unit/contracts/mq/test_mq_send_contract.c)
target_link_libraries(test_mq_send_contract PRIVATE mpx_stub)
add_test(NAME test_mq_send_contract COMMAND test_mq_send_contract)

add_executable(test_mq_setattr_contract tests/unit/contracts/mq/test_mq_setattr_contract.c)
target_link_libraries(test_mq_setattr_contract PRIVATE mpx_stub)
add_test(NAME test_mq_setattr_contract COMMAND test_mq_setattr_contract)

add_executable(test_mq_timedreceive_contract tests/unit/contracts/mq/test_mq_timedreceive_contract.c)
target_link_libraries(test_mq_timedreceive_contract PRIVATE mpx_stub)
add_test(NAME test_mq_timedreceive_contract COMMAND test_mq_timedreceive_contract)

add_executable(test_mq_timedsend_contract tests/unit/contracts/mq/test_mq_timedsend_contract.c)
target_link_libraries(test_mq_timedsend_contract PRIVATE mpx_stub)
add_test(NAME test_mq_timedsend_contract COMMAND test_mq_timedsend_contract)

add_executable(test_nanosleep_contract tests/unit/contracts/time/test_nanosleep_contract.c)
target_link_libraries(test_nanosleep_contract PRIVATE mpx_stub)
add_test(NAME test_nanosleep_contract COMMAND test_nanosleep_contract)

add_executable(test_pthread_attr_getdetachstate_contract tests/unit/contracts/pthread/test_pthread_attr_getdetachstate_contract.c)
target_link_libraries(test_pthread_attr_getdetachstate_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_attr_getdetachstate_contract COMMAND test_pthread_attr_getdetachstate_contract)

add_executable(test_pthread_attr_getstackaddr_contract tests/unit/contracts/pthread/test_pthread_attr_getstackaddr_contract.c)
target_link_libraries(test_pthread_attr_getstackaddr_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_attr_getstackaddr_contract COMMAND test_pthread_attr_getstackaddr_contract)

add_executable(test_pthread_attr_getstacksize_contract tests/unit/contracts/pthread/test_pthread_attr_getstacksize_contract.c)
target_link_libraries(test_pthread_attr_getstacksize_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_attr_getstacksize_contract COMMAND test_pthread_attr_getstacksize_contract)

add_executable(test_pthread_attr_init_contract tests/unit/contracts/pthread/test_pthread_attr_init_contract.c)
target_link_libraries(test_pthread_attr_init_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_attr_init_contract COMMAND test_pthread_attr_init_contract)

add_executable(test_pthread_attr_setdetachstate_contract tests/unit/contracts/pthread/test_pthread_attr_setdetachstate_contract.c)
target_link_libraries(test_pthread_attr_setdetachstate_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_attr_setdetachstate_contract COMMAND test_pthread_attr_setdetachstate_contract)

add_executable(test_pthread_attr_setstackaddr_contract tests/unit/contracts/pthread/test_pthread_attr_setstackaddr_contract.c)
target_link_libraries(test_pthread_attr_setstackaddr_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_attr_setstackaddr_contract COMMAND test_pthread_attr_setstackaddr_contract)

add_executable(test_pthread_attr_setstacksize_contract tests/unit/contracts/pthread/test_pthread_attr_setstacksize_contract.c)
target_link_libraries(test_pthread_attr_setstacksize_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_attr_setstacksize_contract COMMAND test_pthread_attr_setstacksize_contract)

add_executable(test_pthread_cancel_contract tests/unit/contracts/pthread/test_pthread_cancel_contract.c)
target_link_libraries(test_pthread_cancel_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_cancel_contract COMMAND test_pthread_cancel_contract)

add_executable(test_pthread_cleanup_pop_contract tests/unit/contracts/pthread/test_pthread_cleanup_pop_contract.c)
target_link_libraries(test_pthread_cleanup_pop_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_cleanup_pop_contract COMMAND test_pthread_cleanup_pop_contract)

add_executable(test_pthread_cleanup_push_contract tests/unit/contracts/pthread/test_pthread_cleanup_push_contract.c)
target_link_libraries(test_pthread_cleanup_push_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_cleanup_push_contract COMMAND test_pthread_cleanup_push_contract)

add_executable(test_pthread_cond_broadcast_contract tests/unit/contracts/pthread/test_pthread_cond_broadcast_contract.c)
target_link_libraries(test_pthread_cond_broadcast_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_cond_broadcast_contract COMMAND test_pthread_cond_broadcast_contract)

add_executable(test_pthread_cond_destroy_contract tests/unit/contracts/pthread/test_pthread_cond_destroy_contract.c)
target_link_libraries(test_pthread_cond_destroy_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_cond_destroy_contract COMMAND test_pthread_cond_destroy_contract)

add_executable(test_pthread_cond_init_contract tests/unit/contracts/pthread/test_pthread_cond_init_contract.c)
target_link_libraries(test_pthread_cond_init_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_cond_init_contract COMMAND test_pthread_cond_init_contract)

add_executable(test_pthread_cond_signal_contract tests/unit/contracts/pthread/test_pthread_cond_signal_contract.c)
target_link_libraries(test_pthread_cond_signal_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_cond_signal_contract COMMAND test_pthread_cond_signal_contract)

add_executable(test_pthread_cond_timedwait_contract tests/unit/contracts/pthread/test_pthread_cond_timedwait_contract.c)
target_link_libraries(test_pthread_cond_timedwait_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_cond_timedwait_contract COMMAND test_pthread_cond_timedwait_contract)

add_executable(test_pthread_cond_wait_contract tests/unit/contracts/pthread/test_pthread_cond_wait_contract.c)
target_link_libraries(test_pthread_cond_wait_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_cond_wait_contract COMMAND test_pthread_cond_wait_contract)

add_executable(test_pthread_condattr_destroy_contract tests/unit/contracts/pthread/test_pthread_condattr_destroy_contract.c)
target_link_libraries(test_pthread_condattr_destroy_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_condattr_destroy_contract COMMAND test_pthread_condattr_destroy_contract)

add_executable(test_pthread_condattr_getpshared_contract tests/unit/contracts/pthread/test_pthread_condattr_getpshared_contract.c)
target_link_libraries(test_pthread_condattr_getpshared_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_condattr_getpshared_contract COMMAND test_pthread_condattr_getpshared_contract)

add_executable(test_pthread_condattr_init_contract tests/unit/contracts/pthread/test_pthread_condattr_init_contract.c)
target_link_libraries(test_pthread_condattr_init_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_condattr_init_contract COMMAND test_pthread_condattr_init_contract)

add_executable(test_pthread_condattr_setpshared_contract tests/unit/contracts/pthread/test_pthread_condattr_setpshared_contract.c)
target_link_libraries(test_pthread_condattr_setpshared_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_condattr_setpshared_contract COMMAND test_pthread_condattr_setpshared_contract)

add_executable(test_pthread_create_contract tests/unit/contracts/pthread/test_pthread_create_contract.c)
target_link_libraries(test_pthread_create_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_create_contract COMMAND test_pthread_create_contract)

add_executable(test_pthread_detach_contract tests/unit/contracts/pthread/test_pthread_detach_contract.c)
target_link_libraries(test_pthread_detach_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_detach_contract COMMAND test_pthread_detach_contract)

add_executable(test_pthread_equal_contract tests/unit/contracts/pthread/test_pthread_equal_contract.c)
target_link_libraries(test_pthread_equal_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_equal_contract COMMAND test_pthread_equal_contract)

add_executable(test_pthread_exit_contract tests/unit/contracts/pthread/test_pthread_exit_contract.c)
target_link_libraries(test_pthread_exit_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_exit_contract COMMAND test_pthread_exit_contract)

add_executable(test_pthread_join_contract tests/unit/contracts/pthread/test_pthread_join_contract.c)
target_link_libraries(test_pthread_join_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_join_contract COMMAND test_pthread_join_contract)

add_executable(test_pthread_mutex_destroy_contract tests/unit/contracts/pthread/test_pthread_mutex_destroy_contract.c)
target_link_libraries(test_pthread_mutex_destroy_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_mutex_destroy_contract COMMAND test_pthread_mutex_destroy_contract)

add_executable(test_pthread_mutex_init_contract tests/unit/contracts/pthread/test_pthread_mutex_init_contract.c)
target_link_libraries(test_pthread_mutex_init_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_mutex_init_contract COMMAND test_pthread_mutex_init_contract)

add_executable(test_pthread_mutex_lock_contract tests/unit/contracts/pthread/test_pthread_mutex_lock_contract.c)
target_link_libraries(test_pthread_mutex_lock_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_mutex_lock_contract COMMAND test_pthread_mutex_lock_contract)

add_executable(test_pthread_mutex_trylock_contract tests/unit/contracts/pthread/test_pthread_mutex_trylock_contract.c)
target_link_libraries(test_pthread_mutex_trylock_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_mutex_trylock_contract COMMAND test_pthread_mutex_trylock_contract)

add_executable(test_pthread_mutex_unlock_contract tests/unit/contracts/pthread/test_pthread_mutex_unlock_contract.c)
target_link_libraries(test_pthread_mutex_unlock_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_mutex_unlock_contract COMMAND test_pthread_mutex_unlock_contract)

add_executable(test_pthread_mutexattr_destroy_contract tests/unit/contracts/pthread/test_pthread_mutexattr_destroy_contract.c)
target_link_libraries(test_pthread_mutexattr_destroy_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_mutexattr_destroy_contract COMMAND test_pthread_mutexattr_destroy_contract)

add_executable(test_pthread_mutexattr_getprotocol_contract tests/unit/contracts/pthread/test_pthread_mutexattr_getprotocol_contract.c)
target_link_libraries(test_pthread_mutexattr_getprotocol_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_mutexattr_getprotocol_contract COMMAND test_pthread_mutexattr_getprotocol_contract)

add_executable(test_pthread_mutexattr_getpshared_contract tests/unit/contracts/pthread/test_pthread_mutexattr_getpshared_contract.c)
target_link_libraries(test_pthread_mutexattr_getpshared_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_mutexattr_getpshared_contract COMMAND test_pthread_mutexattr_getpshared_contract)

add_executable(test_pthread_mutexattr_gettype_contract tests/unit/contracts/pthread/test_pthread_mutexattr_gettype_contract.c)
target_link_libraries(test_pthread_mutexattr_gettype_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_mutexattr_gettype_contract COMMAND test_pthread_mutexattr_gettype_contract)

add_executable(test_pthread_mutexattr_init_contract tests/unit/contracts/pthread/test_pthread_mutexattr_init_contract.c)
target_link_libraries(test_pthread_mutexattr_init_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_mutexattr_init_contract COMMAND test_pthread_mutexattr_init_contract)

add_executable(test_pthread_mutexattr_setprotocol_contract tests/unit/contracts/pthread/test_pthread_mutexattr_setprotocol_contract.c)
target_link_libraries(test_pthread_mutexattr_setprotocol_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_mutexattr_setprotocol_contract COMMAND test_pthread_mutexattr_setprotocol_contract)

add_executable(test_pthread_mutexattr_setpshared_contract tests/unit/contracts/pthread/test_pthread_mutexattr_setpshared_contract.c)
target_link_libraries(test_pthread_mutexattr_setpshared_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_mutexattr_setpshared_contract COMMAND test_pthread_mutexattr_setpshared_contract)

add_executable(test_pthread_mutexattr_settype_contract tests/unit/contracts/pthread/test_pthread_mutexattr_settype_contract.c)
target_link_libraries(test_pthread_mutexattr_settype_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_mutexattr_settype_contract COMMAND test_pthread_mutexattr_settype_contract)

add_executable(test_pthread_self_contract tests/unit/contracts/pthread/test_pthread_self_contract.c)
target_link_libraries(test_pthread_self_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_self_contract COMMAND test_pthread_self_contract)

add_executable(test_pthread_setcancelstate_contract tests/unit/contracts/pthread/test_pthread_setcancelstate_contract.c)
target_link_libraries(test_pthread_setcancelstate_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_setcancelstate_contract COMMAND test_pthread_setcancelstate_contract)

add_executable(test_pthread_setcanceltype_contract tests/unit/contracts/pthread/test_pthread_setcanceltype_contract.c)
target_link_libraries(test_pthread_setcanceltype_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_setcanceltype_contract COMMAND test_pthread_setcanceltype_contract)

add_executable(test_pthread_testcancel_contract tests/unit/contracts/pthread/test_pthread_testcancel_contract.c)
target_link_libraries(test_pthread_testcancel_contract PRIVATE mpx_stub)
add_test(NAME test_pthread_testcancel_contract COMMAND test_pthread_testcancel_contract)

add_executable(test_sched_yield_contract tests/unit/contracts/pthread/test_sched_yield_contract.c)
target_link_libraries(test_sched_yield_contract PRIVATE mpx_stub)
add_test(NAME test_sched_yield_contract COMMAND test_sched_yield_contract)

add_executable(test_sem_destroy_contract tests/unit/contracts/sync/test_sem_destroy_contract.c)
target_link_libraries(test_sem_destroy_contract PRIVATE mpx_stub)
add_test(NAME test_sem_destroy_contract COMMAND test_sem_destroy_contract)

add_executable(test_sem_init_contract tests/unit/contracts/sync/test_sem_init_contract.c)
target_link_libraries(test_sem_init_contract PRIVATE mpx_stub)
add_test(NAME test_sem_init_contract COMMAND test_sem_init_contract)

add_executable(test_sem_post_contract tests/unit/contracts/sync/test_sem_post_contract.c)
target_link_libraries(test_sem_post_contract PRIVATE mpx_stub)
add_test(NAME test_sem_post_contract COMMAND test_sem_post_contract)

add_executable(test_sem_trywait_contract tests/unit/contracts/sync/test_sem_trywait_contract.c)
target_link_libraries(test_sem_trywait_contract PRIVATE mpx_stub)
add_test(NAME test_sem_trywait_contract COMMAND test_sem_trywait_contract)

add_executable(test_sem_wait_contract tests/unit/contracts/sync/test_sem_wait_contract.c)
target_link_libraries(test_sem_wait_contract PRIVATE mpx_stub)
add_test(NAME test_sem_wait_contract COMMAND test_sem_wait_contract)

add_executable(test_sleep_contract tests/unit/contracts/time/test_sleep_contract.c)
target_link_libraries(test_sleep_contract PRIVATE mpx_stub)
add_test(NAME test_sleep_contract COMMAND test_sleep_contract)

add_executable(test_time_contract tests/unit/contracts/time/test_time_contract.c)
target_link_libraries(test_time_contract PRIVATE mpx_stub)
add_test(NAME test_time_contract COMMAND test_time_contract)

add_executable(test_usleep_contract tests/unit/contracts/time/test_usleep_contract.c)
target_link_libraries(test_usleep_contract PRIVATE mpx_stub)
add_test(NAME test_usleep_contract COMMAND test_usleep_contract)

